--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -9,6 +9,9 @@
     <item android:id="@+id/nav_templates"
         android:title="@string/templates"
         android:icon="@mipmap/ic_content_copy_black_24dp"/>
+    <item android:id="@+id/nav_custom_user_products"
+        android:title="Produkty użytkownika"
+        android:icon="@mipmap/ic_content_copy_black_24dp"></item>
     <item android:id="@+id/nav_settings"
         android:title="@string/options"
         android:icon="@mipmap/ic_settings_black_24dp"/>
