--- a/app/src/main/res/layout/activity_shopping_list_details.xml
+++ b/app/src/main/res/layout/activity_shopping_list_details.xml
@@ -23,14 +23,7 @@
             android:layout_below="@+id/toolbar">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"><![CDATA[
-
-
-                android:layout_height="754dp"/>
-
-
-            ]]>
-
+                android:layout_height="match_parent">
                 <ListView
                     android:id="@+id/list"
                     android:layout_width="wrap_content"
@@ -47,7 +40,6 @@
             android:layout_gravity="end"
             android:layout_marginBottom="11dp"
             android:layout_marginEnd="14dp"
-            android:clickable="true"
             app:backgroundTint="@color/colorPrimary"
             app:fabSize="mini"
             app:srcCompat="@android:drawable/ic_menu_add" />
