--- a/app/src/main/res/layout/lists_items_item.xml
+++ b/app/src/main/res/layout/lists_items_item.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,7 +39,7 @@
             android:hint="Name" />
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/item_amount"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
@@ -53,7 +54,7 @@
             android:text="x" />
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/item_measure"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.81"
