--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorText">#ffffff</color>
     <color name="colorText2">#000000</color>
-    <color name="red">#FF0000</color>
-    <color name="SelectedColor">#857c7c</color>
+    <color name="red">#ff0000</color>
+    <color name="SelectedColor">#46539c</color>
     <color name="DefaultColor">#ffffff</color>
 </resources>
