--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -95,7 +95,7 @@
             android:layout_marginVertical="10dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="Nowy?"
+            android:text="Nie masz konta?"
             android:textAlignment="viewEnd"
             android:textColor="@color/DefaultColor"
             android:textSize="16sp"
@@ -113,9 +113,9 @@
             android:elegantTextHeight="false"
             android:onClick="register"
             android:text="Zarejestruj się!"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             android:textColor="@android:color/holo_blue_bright"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:visibility="visible"
             tools:layout_editor_absoluteX="374sp"
             tools:layout_editor_absoluteY="826sp" />
