--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -16,11 +16,18 @@
                 android:id="@+id/toolbar_layout"
                 layout="@layout/toolbar" />
 
-            <FrameLayout
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:id="@+id/friend_fragment_container" />
+                android:background="@color/colorPrimaryDark"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/friend_fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
         </LinearLayout>
 
         <include
